# rp2040-project-template

./: CMakeLists.txt  main.c  openocd.cfg
.run/: rp2040_project.run.xml
